k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuisinotheque-web
  namespace: cuisinotheque
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cuisinotheque-web
  template:
    metadata:
      labels:
        app: cuisinotheque-web
    spec:
      containers:
        - name: web
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: cuisinotheque-web
  namespace: cuisinotheque
spec:
  selector:
    app: cuisinotheque-web
  ports:
    - port: 80
      targetPort: 8000
