k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: cuisinotheque
spec:
  selector:
    app: cuisinotheque-db
  ports:
    - port: 5432
      targetPort: 5432
